@@ -11,10 +11,22 @@ AM_PROG_CC_STDC
 AC_PROG_RANLIB
 AC_HEADER_STDC
 
-pkg_modules="gtk+-2.0 >= 2.10.0 libgnomecanvas-2.0 >= 2.4.0 poppler-glib >= 0.5.4"
+pkg_modules="gtk+-2.0 >= 2.10.0 libgnomecanvas-2.0 >= 2.4.0 poppler-glib >= 0.5.4 pangoft2 >= 1.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
+
+dnl detect Win32 environment...
+AC_CANONICAL_HOST
+AC_MSG_CHECKING([for Win32 environment])
+case "$host" in
+ *-*-mingw*)
+   os_win32=yes;;
+ *)
+   os_win32=no;;
+esac
+AC_MSG_RESULT([$os_win32])
+AM_CONDITIONAL(WIN32, test "$os_win32" = "yes")
 
 GETTEXT_PACKAGE=xournal
 AC_SUBST(GETTEXT_PACKAGE)
